bin_PROGRAMS = BistaticHub pb_fakesource vb_fakesource

BistaticHub_SOURCES = BistaticHub.cc Beam.cc CommandSender.cc \
	DataType.cc LE_Unpack.cc MergedBeam.cc \
	NCWriter.cc NetReader.cc PB_Beam.cc \
	PB_BeamSource.cc PhaseRelayer.cc Receiver.cc VIRAQ_Beam.cc \
	V_BeamSource.cc \
	\
	Beam.hh BeamSource.hh \
	CommandSender.hh DataType.h LE_Unpack.hh ByteOrder.hh \
	MergedBeam.hh NCWriter.hh NetReader.hh PB_Beam.hh \
	PB_BeamSource.hh PhaseRelayer.hh Receiver.hh \
	VIRAQ_Beam.hh V_BeamSource.hh \
	\
	products.c globals.h vdefine.h

pb_fakesource_SOURCES = pb_fakesource.cc LE_Unpack.cc

vb_fakesource_SOURCES = vb_fakesource.cc LE_Unpack.cc

EXTRA_DIST = BistaticHub.py
